middleware checkUser
